// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for a household appeal with no validation outcome 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 1,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": null,
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for a valid full planning appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 2,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": null,
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for a valid household appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 3,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": {
    "outcome": "Valid",
  },
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for an incomplete full planning appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 5,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": {
    "incompleteReasons": [
      {
        "name": {
          "name": "The original application form is incomplete",
        },
        "text": [],
      },
      {
        "name": {
          "name": "Other",
        },
        "text": [
          "Appellant contact information is incorrect or missing",
        ],
      },
    ],
    "outcome": "Incomplete",
  },
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for an incomplete household appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 3,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": {
    "incompleteReasons": [
      {
        "name": {
          "name": "The original application form is incomplete",
        },
        "text": [],
      },
      {
        "name": {
          "name": "Other",
        },
        "text": [
          "Appellant contact information is incorrect or missing",
        ],
      },
    ],
    "outcome": "Incomplete",
  },
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for an invalid full planning appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 6,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": {
    "invalidReasons": [
      {
        "name": {
          "name": "Appeal has not been submitted on time",
        },
        "text": [],
      },
      {
        "name": {
          "name": "Other",
        },
        "text": [
          "The appeal site address does not match",
        ],
      },
    ],
    "outcome": "Invalid",
  },
}
`;

exports[`appellant cases routes /appeals/:appealId/appellant-cases/:appellantCaseId GET gets a single appellant case for an invalid household appeal 1`] = `
{
  "agriculturalHolding": {},
  "appealId": 4,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appellantCaseId": 1,
  "appellantCostsAppliedFor": null,
  "appellantProcedurePreference": "Hearing",
  "appellantProcedurePreferenceDetails": "Reason for preference",
  "appellantProcedurePreferenceDuration": 5,
  "appellantProcedurePreferenceWitnessCount": 1,
  "applicant": {
    "firstName": "Lee",
    "surname": "Thornton",
  },
  "applicationDate": "2022-03-18T00:00:00.000Z",
  "applicationDecision": "refused",
  "applicationDecisionDate": "2022-03-18T00:00:00.000Z",
  "caseSubmissionDueDate": "2022-03-18T00:00:00.000Z",
  "caseSubmittedDate": "2022-03-18T00:00:00.000Z",
  "developmentDescription": {
    "details": "A test description",
    "isChanged": false,
  },
  "documents": {
    "appellantCaseCorrespondence": {},
    "appellantCaseWithdrawalLetter": {},
    "appellantStatement": {},
    "applicationDecisionLetter": {},
    "changedDescription": {},
    "designAccessStatement": {},
    "newPlansDrawings": {},
    "originalApplicationForm": {},
    "otherNewDocuments": {},
    "ownershipCertificate": {},
    "planningObligation": {},
    "plansDrawings": {},
  },
  "enforcementNotice": null,
  "floorSpaceSquareMetres": null,
  "hasAdvertisedAppeal": true,
  "healthAndSafety": {
    "details": "Small dog big character",
    "hasIssues": true,
  },
  "isAppellantNamedOnApplication": false,
  "localPlanningDepartment": "Maidstone Borough Council",
  "planningApplicationReference": "48269/APP/2021/1482",
  "planningObligation": {},
  "procedureType": "Written",
  "siteAccessRequired": {
    "details": "There is no mobile reception at the site",
    "hasIssues": true,
  },
  "siteAreaSquareMetres": "100",
  "siteOwnership": {
    "areAllOwnersKnown": null,
    "knowsOtherLandowners": null,
    "ownersInformed": true,
    "ownsAllLand": true,
    "ownsSomeLand": true,
  },
  "validation": {
    "invalidReasons": [
      {
        "name": {
          "name": "Appeal has not been submitted on time",
        },
        "text": [],
      },
      {
        "name": {
          "name": "Other",
        },
        "text": [
          "The appeal site address does not match",
        ],
      },
    ],
    "outcome": "Invalid",
  },
}
`;
